[package]
name = "lac"
version = "0.3.0"
authors = ["samo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
hex = "0.4"
hound = "3.4"
claxon = "0.4"
argh = "0.1"
num_cpus = "1.13"
async-recursion = "0.3"
futures = "0.3"
colored = "2.0"

[dependencies.async-std]
version = "1.9"
features = ["attributes", "unstable"]
